possible fix for linux and windows